--- a/laokou-service/laokou-admin/pom.xml
+++ b/laokou-service/laokou-admin/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>io.laokou</groupId>
+		<groupId>org.laokou</groupId>
 		<artifactId>laokou-service</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<groupId>io.laokou</groupId>
+	<groupId>org.laokou</groupId>
 	<artifactId>laokou-admin</artifactId>
 	<name>laokou-admin</name>
 	<description>后台管理模块</description>
@@ -17,15 +17,15 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.laokou</groupId>
+			<groupId>org.laokou</groupId>
 			<artifactId>laokou-redis</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.laokou</groupId>
+			<groupId>org.laokou</groupId>
 			<artifactId>laokou-log</artifactId>
 			<exclusions>
 				<exclusion>
-					<groupId>io.laokou</groupId>
+					<groupId>org.laokou</groupId>
 					<artifactId>laokou-common</artifactId>
 				</exclusion>
 				<exclusion>
@@ -35,11 +35,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>io.laokou</groupId>
+			<groupId>org.laokou</groupId>
 			<artifactId>laokou-dynamic-datasource</artifactId>
 			<exclusions>
 				<exclusion>
-					<groupId>io.laokou</groupId>
+					<groupId>org.laokou</groupId>
 					<artifactId>laokou-common</artifactId>
 				</exclusion>
 			</exclusions>
