--- a/laokou-service/laokou-auth/pom.xml
+++ b/laokou-service/laokou-auth/pom.xml
@@ -3,25 +3,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.laokou</groupId>
+        <groupId>org.laokou</groupId>
         <artifactId>laokou-service</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>io.laokou</groupId>
+    <groupId>org.laokou</groupId>
     <artifactId>laokou-auth</artifactId>
     <name>laokou-auth</name>
     <description>认证模块</description>
     <dependencies>
         <dependency>
-            <groupId>io.laokou</groupId>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-redis</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.laokou</groupId>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-log</artifactId>
             <exclusions>
                 <exclusion>
-                    <groupId>io.laokou</groupId>
+                    <groupId>org.laokou</groupId>
                     <artifactId>laokou-common</artifactId>
                 </exclusion>
                 <exclusion>
@@ -31,11 +31,11 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>io.laokou</groupId>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-dynamic-datasource</artifactId>
             <exclusions>
                 <exclusion>
-                    <groupId>io.laokou</groupId>
+                    <groupId>org.laokou</groupId>
                     <artifactId>laokou-common</artifactId>
                 </exclusion>
             </exclusions>
