--- a/laokou-service/laokou-redis/pom.xml
+++ b/laokou-service/laokou-redis/pom.xml
@@ -3,12 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>io.laokou</groupId>
+        <groupId>org.laokou</groupId>
         <artifactId>laokou-service</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.laokou</groupId>
+    <groupId>org.laokou</groupId>
     <artifactId>laokou-redis</artifactId>
     <description>redis</description>
     <dependencies>
@@ -25,7 +25,7 @@
             <artifactId>redisson</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.laokou</groupId>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common</artifactId>
             <exclusions>
                 <exclusion>
