--- a/laokou-service/laokou-admin/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/src/main/resources/application.yml
@@ -43,7 +43,7 @@ management:
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   #实体类扫描，多个package用头号或分号分隔
-  type-aliases-package: io.laokou.admin.domain.**.entity
+  type-aliases-package: org.laokou.admin.domain.**.entity
   global-config:
     #数据库相关配置
     db-config:
