--- a/laokou-service/laokou-oauth2/src/main/resources/application.yml
+++ b/laokou-service/laokou-oauth2/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   #实体类扫描，多个package用头号或分号分隔
-  type-aliases-package: io.laokou.oauth2.entity
+  type-aliases-package: org.laokou.oauth2.entity
   global-config:
     #数据库相关配置
     db-config:
