--- a/laokou-service/laokou-oauth2/pom.xml
+++ b/laokou-service/laokou-oauth2/pom.xml
@@ -37,6 +37,10 @@
             <artifactId>laokou-common</artifactId>
             <exclusions>
                 <exclusion>
+                    <groupId>com.github.xiaoymin</groupId>
+                    <artifactId>knife4j-spring-boot-starter</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>com.baomidou</groupId>
                     <artifactId>mybatis-plus-boot-starter</artifactId>
                 </exclusion>
