--- a/laokou-service/laokou-module/laokou-elasticsearch/laokou-elasticsearch-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-elasticsearch/laokou-elasticsearch-server/pom.xml
@@ -24,15 +24,13 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-elasticsearch-client</artifactId>
         </dependency>
-        <!--注册中心客户端-->
         <dependency>
-            <groupId>com.tencent.cloud</groupId>
-            <artifactId>spring-cloud-starter-tencent-polaris-discovery</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-        <!--配置中心客户端-->
         <dependency>
-            <groupId>com.tencent.cloud</groupId>
-            <artifactId>spring-cloud-starter-tencent-polaris-config</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
