--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
         <docker.version>1.2.2</docker.version>
         <!--spring-security版本-->
         <spring-security.version>6.0.1</spring-security.version>
-        <!--cloud-tencent版本-->
-        <spring-cloud-tencent.version>1.8.2-2022.0.0</spring-cloud-tencent.version>
+        <!--cloud-alibaba版本-->
+        <spring-cloud-alibaba.version>2022.0.0.0-RC1</spring-cloud-alibaba.version>
         <!--spring-doc版本-->
         <spring-doc.version>2.0.2</spring-doc.version>
     </properties>
@@ -60,11 +60,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!-- 定义 spring cloud tencent 版本 -->
+            <!-- 定义 spring cloud alibaba 版本 -->
             <dependency>
-                <groupId>com.tencent.cloud</groupId>
-                <artifactId>spring-cloud-tencent-dependencies</artifactId>
-                <version>${spring-cloud-tencent.version}</version>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -173,9 +173,9 @@
         <profile>
             <id>dev</id>
             <properties>
-                <POLARIS_NAMESPACE>default</POLARIS_NAMESPACE>
-                <POLARIS_ADDRESS>grpc://127.0.0.1:8091</POLARIS_ADDRESS>
-                <CONFIG_ADDRESS>grpc://127.0.0.1:8093</CONFIG_ADDRESS>
+                <NACOS-NAMESPACE>public</NACOS-NAMESPACE>
+                <NACOS-DISCOVERY-ADDRESS>http://127.0.0.1:8848</NACOS-DISCOVERY-ADDRESS>
+                <NACOS-CONFIG-ADDRESS>http://127.0.0.1:8848</NACOS-CONFIG-ADDRESS>
                 <profile.active>dev</profile.active>
                 <mybatis-plus.log-impl>org.apache.ibatis.logging.stdout.StdOutImpl</mybatis-plus.log-impl>
             </properties>
@@ -187,9 +187,9 @@
         <profile>
             <id>test</id>
             <properties>
-                <POLARIS_NAMESPACE>laokou</POLARIS_NAMESPACE>
-                <POLARIS_ADDRESS>grpc://192.168.62.144:8091</POLARIS_ADDRESS>
-                <CONFIG_ADDRESS>grpc://192.168.62.144:8093</CONFIG_ADDRESS>
+                <NACOS-NAMESPACE>a61abd4c-ef96-42a5-99a1-616adee531f3</NACOS-NAMESPACE>
+                <NACOS-DISCOVERY-ADDRESS>http://192.168.62.144:8848</NACOS-DISCOVERY-ADDRESS>
+                <NACOS-CONFIG-ADDRESS>http://192.168.62.144:8848</NACOS-CONFIG-ADDRESS>
                 <profile.active>test</profile.active>
                 <mybatis-plus.log-impl>org.apache.ibatis.logging.stdout.StdOutImpl</mybatis-plus.log-impl>
             </properties>
@@ -198,9 +198,9 @@
         <profile>
             <id>prod</id>
             <properties>
-                <POLARIS_NAMESPACE>kcloud-platform</POLARIS_NAMESPACE>
-                <POLARIS_ADDRESS>grpc://192.168.62.137:8091</POLARIS_ADDRESS>
-                <CONFIG_ADDRESS>grpc://192.168.62.137:8093</CONFIG_ADDRESS>
+                <NACOS-NAMESPACE>kcloud-platform</NACOS-NAMESPACE>
+                <NACOS-DISCOVERY-ADDRESS>http://192.168.62.137:8848</NACOS-DISCOVERY-ADDRESS>
+                <NACOS-CONFIG-ADDRESS>http://192.168.62.137:8848</NACOS-CONFIG-ADDRESS>
                 <profile.active>prod</profile.active>
                 <mybatis-plus.log-impl>org.apache.ibatis.logging.nologging.NoLoggingImpl</mybatis-plus.log-impl>
             </properties>
@@ -250,7 +250,6 @@
                 <excludes>
                     <exclude>application*.yml</exclude>
                     <exclude>application*.properties</exclude>
-                    <exclude>bootstrap.yml</exclude>
                 </excludes>
             </resource>
             <!--添加需要包含的文件-->
