perf: 解决gateway无法转发服务

--- a/laokou-cloud/laokou-gateway/src/main/resources/bootstrap.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/bootstrap.yml
@@ -9,3 +9,5 @@ spring:
       config:
         server-addr: ${NACOS-CONFIG-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
+        group: LAOKOU_GROUP
+        refresh-enabled: true
