--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -55,6 +55,18 @@ management:
     health:
       show-details: always
 
+# feign
+feign:
+  httpclient:
+    enabled: true # 支持HttpClient的开关
+    max-connections: 200 # 最大连接数
+    max-connections-per-route: 50 # 单个路径的最大连接数
+  client:
+    config:
+      default:
+        connectTimeout: 120000
+        readTimeout: 120000
+
 # 忽略uris
 ignore:
   uris:
