--- a/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/bootstrap.yml
@@ -12,7 +12,8 @@ spring:
         # https://github.com/alibaba/spring-cloud-alibaba/blob/2021.x/spring-cloud-alibaba-docs/src/main/asciidoc-zh/nacos-config.adoc
         # 指定读取的文件格式
         file-extension: yaml
-        group: DEFAULT_GROUP
+        group: LAOKOU_GROUP
+        refresh-enabled: true
         # 读取公共配置
         # Data Id 在默认的组 DEFAULT_GROUP,不支持配置的动态刷新
         extension-configs:
