--- a/pom.xml
+++ b/pom.xml
@@ -174,8 +174,8 @@
             <id>dev</id>
             <properties>
                 <NACOS-NAMESPACE>public</NACOS-NAMESPACE>
-                <NACOS-DISCOVERY-ADDRESS>http://127.0.0.1:8848</NACOS-DISCOVERY-ADDRESS>
-                <NACOS-CONFIG-ADDRESS>http://127.0.0.1:8848</NACOS-CONFIG-ADDRESS>
+                <NACOS-DISCOVERY-ADDRESS>127.0.0.1:8848</NACOS-DISCOVERY-ADDRESS>
+                <NACOS-CONFIG-ADDRESS>127.0.0.1:8848</NACOS-CONFIG-ADDRESS>
                 <profile.active>dev</profile.active>
             </properties>
             <activation>
@@ -187,8 +187,8 @@
             <id>test</id>
             <properties>
                 <NACOS-NAMESPACE>a61abd4c-ef96-42a5-99a1-616adee531f3</NACOS-NAMESPACE>
-                <NACOS-DISCOVERY-ADDRESS>http://192.168.62.144:8848</NACOS-DISCOVERY-ADDRESS>
-                <NACOS-CONFIG-ADDRESS>http://192.168.62.144:8848</NACOS-CONFIG-ADDRESS>
+                <NACOS-DISCOVERY-ADDRESS>192.168.62.144:8848</NACOS-DISCOVERY-ADDRESS>
+                <NACOS-CONFIG-ADDRESS>192.168.62.144:8848</NACOS-CONFIG-ADDRESS>
                 <profile.active>test</profile.active>
             </properties>
         </profile>
@@ -196,9 +196,9 @@
         <profile>
             <id>prod</id>
             <properties>
-                <NACOS-NAMESPACE>kcloud-platform</NACOS-NAMESPACE>
-                <NACOS-DISCOVERY-ADDRESS>http://192.168.62.137:8848</NACOS-DISCOVERY-ADDRESS>
-                <NACOS-CONFIG-ADDRESS>http://192.168.62.137:8848</NACOS-CONFIG-ADDRESS>
+                <NACOS-NAMESPACE>xxxxxxxxxxxxxxxxxxxxxxxxxxx</NACOS-NAMESPACE>
+                <NACOS-DISCOVERY-ADDRESS>192.168.62.137:8848</NACOS-DISCOVERY-ADDRESS>
+                <NACOS-CONFIG-ADDRESS>192.168.62.137:8848</NACOS-CONFIG-ADDRESS>
                 <profile.active>prod</profile.active>
             </properties>
         </profile>
