--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -74,6 +74,6 @@ ignore:
     - /actuator/**
     - /ws/**
     - /favicon.ico
-    - /swagger-ui/**
+    - /webjars/swagger-ui/**
     - /swagger-ui.html
     - /**/v3/api-docs/**
