perf: auth集成sentinel，实现服务限流，自定义异常

--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
         db0:
           nacos:
             server-addr: @NACOS-DISCOVERY-ADDRESS@
-            namespace: ${NACOS-NAMESPACE}
+            namespace: @NACOS-NAMESPACE@
             data-id: gateway-sentinel.json
             rule-type: gw_flow # 网关规则
             group-id: LAOKOU_GROUP
