--- a/laokou-cloud/pom.xml
+++ b/laokou-cloud/pom.xml
@@ -16,5 +16,6 @@
     <modules>
         <module>laokou-gateway</module>
         <module>laokou-monitor</module>
+        <module>laokou-sentinel</module>
     </modules>
 </project>
