--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -85,6 +85,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.laokou</groupId>
+                <artifactId>laokou-sentinel</artifactId>
+                <version>${laokou.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.amazonaws</groupId>
                 <artifactId>aws-java-sdk-s3</artifactId>
                 <version>${aws-java-sdk-s3.version}</version>
