--- a/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/application.yml
@@ -28,6 +28,9 @@ spring:
       max-file-size: -1
       max-request-size: -1
   cloud:
+    # 解决集成sentinel，openfeign启动报错，官方下个版本修复
+    openfeign:
+      lazy-attributes-resolution: true
     # sentinel
     sentinel:
       datasource:
