refactor: elasticsearch集成nacos，auth代码规范

--- a/laokou-service/laokou-module/laokou-elasticsearch/laokou-elasticsearch-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-elasticsearch/laokou-elasticsearch-server/src/main/resources/application.yml
@@ -12,17 +12,11 @@ server:
     direct-buffers: true
 
 spring:
+  application:
+    name: @pom.parent.artifactId@
+  # dev|test|prod
   profiles:
     active: @profile.active@
   messages:
     encoding: UTF-8
     basename: i18n/messages
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  endpoint:
-    health:
-      show-details: always
