--- a/laokou-service/laokou-module/laokou-elasticsearch/laokou-elasticsearch-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-module/laokou-elasticsearch/laokou-elasticsearch-server/src/main/resources/bootstrap.yml
@@ -1,14 +1,25 @@
 # spring
 spring:
-  application:
-    name: laokou-elasticsearch
   cloud:
-    polaris:
-      address: ${POLARIS_ADDRESS}
-      namespace: ${POLARIS_NAMESPACE}
-    tencent:
-      metadata:
-        content:
-          version: 2.0.0
-    config:
-      address: ${CONFIG_ADDRESS}
+    # nacos
+    nacos:
+      discovery:
+        server-addr: ${NACOS-DISCOVERY-ADDRESS}
+        namespace: ${NACOS-NAMESPACE}
+      config:
+        server-addr: ${NACOS-CONFIG-ADDRESS}
+        namespace: ${NACOS-NAMESPACE}
+        # https://github.com/alibaba/spring-cloud-alibaba/blob/2021.x/spring-cloud-alibaba-docs/src/main/asciidoc-zh/nacos-config.adoc
+        # 指定读取的文件格式
+        file-extension: yaml
+        group: LAOKOU_GROUP
+        refresh-enabled: true
+        # 读取公共配置
+        # Data Id 在默认的组 DEFAULT_GROUP,不支持配置的动态刷新
+        extension-configs:
+          - data-id: application-common-elasticsearch.yaml
+            group: LAOKOU_GROUP
+            refresh: true
+          - data-id: application-common.yaml
+            group: LAOKOU_GROUP
+            refresh: true
