--- a/laokou-service/laokou-admin/laokou-admin-server/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-server/pom.xml
@@ -48,6 +48,10 @@
 			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.laokou</groupId>
+			<artifactId>laokou-elasticsearch-client</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-loadbalancer</artifactId>
 		</dependency>
