refactor: admin+flowable增加分布式事务seata

--- a/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/bootstrap.yml
@@ -26,3 +26,6 @@ spring:
           - data-id: application-common.yaml
             group: LAOKOU_GROUP
             refresh: true
+          - data-id: application-common-seata.yaml
+            group: LAOKOU_GROUP
+            refresh: true
