refactor: 升级flowable的依赖

--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/application.yml
@@ -23,6 +23,9 @@ spring:
     encoding: UTF-8
     basename: i18n/messages
   cloud:
+    loadbalancer:
+      nacos:
+        enabled: true
     inetutils:
       ignoredInterfaces:
         - docker0
