--- a/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-client/pom.xml
+++ b/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-client/pom.xml
@@ -14,11 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-im-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.laokou</groupId>
-            <artifactId>laokou-log-client</artifactId>
+            <artifactId>laokou-common-core</artifactId>
         </dependency>
     </dependencies>
 
