--- a/laokou-service/laokou-admin/laokou-admin-server/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-server/pom.xml
@@ -88,10 +88,6 @@
 			<artifactId>laokou-flowable-client</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
-			<artifactId>laokou-rocketmq-client</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
@@ -99,6 +95,10 @@
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-sentinel</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-im-client</artifactId>
+        </dependency>
     </dependencies>
 	<build>
 		<plugins>
