refactor: gateway的路径写入配置文件

--- a/laokou-cloud/laokou-gateway/src/main/resources/bootstrap.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/bootstrap.yml
@@ -16,3 +16,6 @@ spring:
           - data-id: application-common.yaml
             group: LAOKOU_GROUP
             refresh: true
+          - data-id: application-gateway.yaml
+            group: LAOKOU_GROUP
+            refresh: true
