--- a/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-consumer/pom.xml
+++ b/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-consumer/pom.xml
@@ -11,8 +11,8 @@
     <artifactId>laokou-rocketmq-consumer</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rocketmq</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
