--- a/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-consumer/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-consumer/src/main/resources/application.yml
@@ -4,18 +4,8 @@ server:
 
 # spring
 spring:
+  application:
+    name: @pom.artifactId@
   profiles:
     # dev|test|prod
     active: @profile.active@
-
-# feign
-feign:
-  httpclient:
-    enabled: true # 支持HttpClient的开关
-    max-connections: 200 # 最大连接数
-    max-connections-per-route: 50 # 单个路径的最大连接数
-  client:
-    config:
-      default:
-        connectTimeout: 120000
-        readTimeout: 120000
