--- a/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-server/pom.xml
@@ -19,8 +19,8 @@
             <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rocketmq</artifactId>
         </dependency>
         <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
